  * Update 115_llvm_dynamic_linking.diff,
    116_use_shared_galliumcore.diff to apply.
  * rules: Drop the dri-alternates driver search path, and don't ship
    gallium version of i915_dri.so for now.

  [ Robert Hooker ]
  * Stop shipping r300/r600 classic drivers in libgl1-mesa-dri-experimental,
    no longer shipped upstream.
  * Fix up 116_use_shared_galliumcore.diff so it works.

 -- Robert Hooker <sarvatt@ubuntu.com>  Mon, 30 Jan 2012 15:52:13 -0500

mesa (8.0~rc1-1) UNRELEASED; urgency=low

  [ Cyril Brulebois ]
  * New upstream snapshot.
  * Disable patch temporarily (needs a refresh):
    - 11-hurd-ftbfs-again.diff
  * Drop patch, no longer needed since swrastg was renamed to swrast:
    - 14-load-swrastg-before-swrast.diff
  * Update rules file to strop building DRI1 drivers, they went away
    with the following upstream commit:
    - dri: Remove all DRI1 drivers (e4344161bd).
  * Update not-installed for removed files.
  * Stop trying to ship swrastg through libgl1-mesa-dri-experimental,
    it replaced the non-gallium variant.

  [ Timo Aaltonen ]
  * Refresh patches.
  * control: Add libxcb-glx0-dev to build-depends.
  * control: Drop libglw1-mesa, libglw1-mesa-dev, glw got moved to a
    separate source package.
  * libegl-mesa.symbols, libgles2-mesa.symbols: Add new symbols.
  * rules: Drop obsolete configure options.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 23 Dec 2011 14:13:28 +0100

mesa (7.11.2-1) unstable; urgency=low

  * New upstream release:
    - Fix a few intel bugs.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 11 Dec 2011 15:43:40 +0100

mesa (7.11.1-1) unstable; urgency=low

  [ Sven Joachim ]
  * New upstream release.
  * Move the Nouveau drivers to the libgl1-mesa-dri package
    (Closes: #645239).
  * Install the swrastg driver in the libgl1-mesa-dri-experimental package
    (Closes: #605444).
    - New patch 14-load-swrastg-before-swrast.diff to prefer swrastg over
      swrast.